# habit_tracker

./: .env.template  Dockerfile  README.md  celerybeat-schedule-shm  celerybeat-schedule-wal  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
.github/workflows/: ci_cd.yml  deploy.yml
config/: settings.py  urls.py
habits/: admin.py  models.py  serializers.py  tasks.py  test_serializers.py  test_tasks.py  test_views.py  tests.py  urls.py  views.py
habits/migrations/: 0001_initial.py
nginx/: default.conf
tg_bot/: admin.py  bot.py  models.py  tests.py
tg_bot/management/commands/: run_bot.py
tg_bot/migrations/: 0001_initial.py
