[project]
name = "habit-tracker"
version = "0.1.0"
description = ""
authors = [
    {name = "Ян Харисов",email = "yanhok2001@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv (>=0.9.9,<0.10.0)",
    "django (>=6.0.5,<7.0.0)",
    "djangorestframework (>=3.17.1,<4.0.0)",
    "djangorestframework-simplejwt (>=5.5.1,<6.0.0)",
    "django-cors-headers (>=4.9.0,<5.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "celery (>=5.6.3,<6.0.0)",
    "redis (>=8.0.0,<9.0.0)",
    "python-telegram-bot[socks] (>=22.7,<23.0)",
    "drf-spectacular (>=0.29.0,<0.30.0)",
    "pytest-django (>=4.12.0,<5.0.0)",
    "coverage (>=7.14.1,<8.0.0)",
    "pysocks (>=1.7.1,<2.0.0)",
    "requests (>=2.34.2,<3.0.0)",
    "gunicorn (>=26.0.0,<27.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
